--- a/i18n/en.json
+++ b/i18n/en.json
@@ -3515,6 +3515,10 @@
     "translation": "Failed to parse token data from email verification"
   },
   {
+    "id": "api.web_socket.connect.check_origin.app_error",
+    "translation": "Invalid Origin header set during websocket upgrade."
+  },
+  {
     "id": "api.web_socket.connect.upgrade.app_error",
     "translation": "Failed to upgrade websocket connection."
   },
